[gd_scene load_steps=28 format=3 uid="uid://euuv6783mj1j"]

[ext_resource type="PackedScene" uid="uid://cyceakrgrsniu" path="res://chars/base_enemy.tscn" id="1_47i7i"]
[ext_resource type="Texture2D" uid="uid://eu8iskdngshs" path="res://Art_Components/Enemies/Bosses/spritesheets/spritesheets/mage-1-85x94.png" id="2_klelx"]
[ext_resource type="Script" path="res://chars/boss_enemy.gd" id="2_r4b5u"]
[ext_resource type="Texture2D" uid="uid://d2ggaktiv0hrj" path="res://knight.png" id="3_kcqrd"]
[ext_resource type="Script" path="res://Component/stagger.gd" id="5_1y0yi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0dwob"]
atlas = ExtResource("2_klelx")
region = Rect2(0, 0, 85, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_htdkm"]
atlas = ExtResource("2_klelx")
region = Rect2(85, 0, 85, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxwvq"]
atlas = ExtResource("2_klelx")
region = Rect2(170, 0, 85, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2g1j"]
atlas = ExtResource("2_klelx")
region = Rect2(255, 0, 85, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1r6e"]
atlas = ExtResource("2_klelx")
region = Rect2(0, 94, 85, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_akr4k"]
atlas = ExtResource("2_klelx")
region = Rect2(85, 94, 85, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_071s3"]
atlas = ExtResource("2_klelx")
region = Rect2(170, 94, 85, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_wktl6"]
atlas = ExtResource("2_klelx")
region = Rect2(255, 94, 85, 94)

[sub_resource type="SpriteFrames" id="SpriteFrames_r5yi3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dwob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htdkm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxwvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2g1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1r6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akr4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_071s3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wktl6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_og3s4"]
atlas = ExtResource("3_kcqrd")
region = Rect2(138, 0, 46, 90)

[sub_resource type="SpriteFrames" id="SpriteFrames_io8ug"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_og3s4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_5iyqb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D/AnimatedSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-47, -40.75)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D/AnimatedSprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimatedSprite2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -48)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("HitBox/CollisionShape2D:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-75, -93)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("HitBox/CollisionShape2D:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.785398]
}

[sub_resource type="Animation" id="Animation_slg6o"]
resource_name = "attack_1"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-50, -52), Vector2(-76, -41), Vector2(-81, 5), Vector2(-72, 43)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D/AnimatedSprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.785398, -1.5708, -2.35619]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-46, -103), Vector2(-75, -93), Vector2(-84, -47), Vector2(-78, -5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HitBox/CollisionShape2D:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.785398, -1.5708, -2.35619]
}

[sub_resource type="Animation" id="Animation_dl0fo"]
resource_name = "attack_2"
length = 0.35
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/AnimatedSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.57053]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D/AnimatedSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-65, 39), Vector2(-65, 39), Vector2(-65, -29)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-68, -13), Vector2(-68, -13), Vector2(-68, -81)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox/CollisionShape2D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5708]
}

[sub_resource type="Animation" id="Animation_ln4wn"]
resource_name = "attack_3"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-47, -40.75), Vector2(-47, -40), Vector2(-52, 40), Vector2(-52, 40), Vector2(-47, -40.75)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D/AnimatedSprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -3.14106, -3.14106, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/CollisionShape2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -3.14159, -3.14159, -2.35619, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-43, -92), Vector2(-51, -85), Vector2(-56, -6), Vector2(-57, -9), Vector2(-43, -92)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_qunsu"]
resource_name = "idle"
length = 0.75
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_cn1wj"]
resource_name = "stunned"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -48), Vector2(5, -24)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wlpkv"]
_data = {
"RESET": SubResource("Animation_5iyqb"),
"attack_1": SubResource("Animation_slg6o"),
"attack_2": SubResource("Animation_dl0fo"),
"attack_3": SubResource("Animation_ln4wn"),
"idle": SubResource("Animation_qunsu"),
"stunned": SubResource("Animation_cn1wj")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_em7ey"]
size = Vector2(80, 93)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0kyq4"]
size = Vector2(80, 93)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_do8a1"]
size = Vector2(6.5, 34)

[sub_resource type="CircleShape2D" id="CircleShape2D_c2bll"]
radius = 77.201

[node name="base_enemy" instance=ExtResource("1_47i7i")]
scale = Vector2(0.5, 0.5)
script = ExtResource("2_r4b5u")

[node name="AnimatedSprite2D" parent="." index="0"]
position = Vector2(0, -48)
sprite_frames = SubResource("SpriteFrames_r5yi3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="AnimatedSprite2D" index="0"]
position = Vector2(-47, -40.75)
scale = Vector2(0.76087, 1.09444)
sprite_frames = SubResource("SpriteFrames_io8ug")

[node name="AnimationPlayer" parent="." index="1"]
libraries = {
"": SubResource("AnimationLibrary_wlpkv")
}

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2(0, -46.5)
shape = SubResource("RectangleShape2D_em7ey")

[node name="WallCheckLeft" parent="WallChecks" index="0"]
target_position = Vector2(-56, 0)

[node name="WallCheckRight" parent="WallChecks" index="1"]
target_position = Vector2(56, 0)

[node name="FloorChecksLeft" parent="FloorChecks" index="0"]
position = Vector2(-40, -24)

[node name="FloorChecksRight" parent="FloorChecks" index="1"]
position = Vector2(40, -24)

[node name="FloorJumpCheckRight" parent="JumpChecks" index="0"]
position = Vector2(40, -24)

[node name="FloorJumpCheckLeft" parent="JumpChecks" index="1"]
position = Vector2(-40, -24)

[node name="GapCheckLeft" parent="JumpChecks" index="2"]
position = Vector2(-40, -24)

[node name="GapCheckRight" parent="JumpChecks" index="3"]
position = Vector2(40, -24)

[node name="LeapUpCheckLeft" parent="JumpChecks" index="4"]
position = Vector2(-40, -48)

[node name="LeapUpCheckRight" parent="JumpChecks" index="5"]
position = Vector2(40, -48)

[node name="Health" parent="." index="10"]
max_health = 10

[node name="HurtBox" parent="." index="11" node_paths=PackedStringArray("health")]
health = NodePath("../Health")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, -46.5)
shape = SubResource("RectangleShape2D_0kyq4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(-75, -93)
rotation = -0.785398
shape = SubResource("RectangleShape2D_do8a1")
disabled = true

[node name="AttackRange" parent="." index="13"]
collision_layer = 1024
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange" index="0"]
position = Vector2(0, -46)
shape = SubResource("CircleShape2D_c2bll")

[node name="Stagger" type="Node" parent="." index="14"]
script = ExtResource("5_1y0yi")

[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
